kustomize/gateway/resources/cilium/loadbalancer/hcloud-lb/patches/gateway.yaml
---
# Annotations for hcloud-ccm to provision a Hetzner Cloud Load Balancer for the Gateway Service.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${gateway_name}
  namespace: system-gateway
spec:
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/location: ${hcloud_location:-fsn1}
      load-balancer.hetzner.cloud/use-private-ip: "true"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "false"
